syntax = "proto3";

option java_package = "data.exchange.grpc";

package dataexchange;

// The greeting service definition.
service DataExchanger {
  // Sends a greeting
  rpc SendData (DataRequest) returns (DataResponse);
}

// The request message containing the user's name.
message DataRequest {
  string JsonData = 1;
}

// The response message containing the greetings.
message DataResponse {
  string message = 1;
}
